[package]
name = "mtui-testreport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mtui-types.workspace = true
mtui-config.workspace = true
mtui-hosts.workspace = true
mtui-datasources.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
regex.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3"
wiremock.workspace = true
