[package]
name = "mtui-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sandogasa-rpmvercmp.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
